[package]
name = "re-name"
version = "0.1.0"
authors = ["Bzero <B_0@posteo.net>"]
edition = "2021"
description = "re-name is a command-line tool for (bulk) file renaming."
readme = "README.md"
repository = "https://github.com/Bzero/re-name"
license = "MIT"
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.22", features = ["derive"] }
itertools = "0.13.0"
regex = "1.11.1"
walkdir = "2.5.0"
